@@ -43,6 +43,7 @@ target_wrapper.sh
 
 # qtcreator generated files
 *.pro.user*
+picta-dl-gui.qmodel
 
 # xemacs temporary files
 *.flc
