@@ -3,9 +3,9 @@ Name=Picta Downloader GUI
 GenericName=Picta Downloader GUI
 Comment=Descargar contenidos audiovisuales desde Picta
 Exec=Picta-dl_GUI
-Icon=picta-dl-gui_logo
+Icon=picta-dl-gui
 MimeType=
 Terminal=False
 Type=Appication
-Categories=Qt;AudioVideo;
+Categories=Qt;AudioVideo;Utility;
 Keywords=Multimedia;Video;Audio;
