@@ -2,10 +2,10 @@
 #define VERSION_H
 
 // human-readable version string (VersionName)
-#define VERSION_STRING "21.02.08"
+#define VERSION_STRING "21.02.09"
 
 // machine-readable version id (VersionId)
 // the update-checker compares versions using this integer
-#define VERSION_INTEGER 210208
+#define VERSION_INTEGER 210209
 
 #endif // VERSION_H
